Provide a generic maintenance page (#407)

--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
@@ -13,16 +13,11 @@ upstream cms-backend {
 server {
   # CMS configuration file for nginx, templated by ansible
       
-  # Proxy to a remote maintanence page
-  {% if NGINX_EDXAPP_ENABLE_S3_MAINTENANCE %}
+  # Do not include a 503 error in NGINX_ERROR_PAGES when
+  # NGINX_EDXAPP_ENABLE_MAINTENANCE is enabled.
 
-  # Do not include a 502 error in NGINX_ERROR_PAGES when 
-  # NGINX_EDXAPP_ENABLE_S3_MAINTENANCE is enabled.
-
-  error_page 502 @maintenance;
-
-    {% include "s3_maintenance.j2" %}
-  
+  {% if NGINX_EDXAPP_ENABLE_MAINTENANCE %}
+  error_page 503 @maintenance;
   {% endif %}
 
   # error pages
@@ -100,8 +95,22 @@ error_page {{ k }} {{ v }};
     {% if EDXAPP_CMS_ENABLE_BASIC_AUTH|bool %}
       {% include "basic-auth.j2" %}
     {% endif %}
+
+    {% if NGINX_EDXAPP_ENABLE_MAINTENANCE %}
+    if ($maintenance) {
+        return 503;
+    }
+    {% endif %}
+
     try_files $uri @proxy_to_cms_app;
   }
+
+  {% if NGINX_EDXAPP_ENABLE_MAINTENANCE %}
+  location @maintenance {
+      root /edx/var/nginx/server-static;
+      rewrite ^(.*)$ /maintenance.html break;
+  }
+  {% endif %}
 
   # No basic auth security on the github_service_hook url, so that github can use it for cms
   location /github_service_hook {
