--- a/playbooks/roles/nginx/templates/etc/nginx/nginx.conf.j2
+++ b/playbooks/roles/nginx/templates/etc/nginx/nginx.conf.j2
@@ -13,6 +13,12 @@ http {
         # Basic Settings
         ##
 
+        {% if NGINX_EDXAPP_ENABLE_MAINTENANCE %}
+        map $host $maintenance {
+            default 1;
+        }
+        {% endif %}
+
         sendfile on;
         tcp_nopush on;
         tcp_nodelay on;
